--- a/playground/index.html
+++ b/playground/index.html
@@ -121,6 +121,8 @@
 </head>
 
 <body>
+  <!-- Opening animation -->
+  <div class="opening-container"><div class="fade-in"></div></div>
   <!-- Custom cursor -->
   <div class="custom-cursor"></div>
   <!-- Header with navigation -->
