edit bloom page

--- a/playground/bloom/index.html
+++ b/playground/bloom/index.html
@@ -145,6 +145,19 @@
         </div>
         <!-- Spacer large -->
         <div class="spacer spacer-lg"></div>
+        <!-- Features heading -->
+        <p class="artwork-paragraph">Features:</p>
+        <!-- Spacer small -->
+        <div class="spacer spacer-sm"></div>
+        <!-- Features detail -->
+        <p class="artwork-paragraph"><strong>Hand tracking mode:</strong> Utilizes the ml5.js HandPose model to detect hand movements and draw flowers.</p>
+        <p class="artwork-paragraph"><strong>Mouse mode:</strong> Allows users to draw flowers using cursor movements.</p>
+        <p class="artwork-paragraph"><strong>Dynamic growth:</strong> Flowers bloom naturally in response to movement and interaction.</p>
+        <p class="artwork-paragraph"><strong>Genetic inheritance:</strong> Flowers can inherit colors, shapes, or patterns from previously drawn ones.</p>
+        <p class="artwork-paragraph"><strong>Random generation:</strong> Flowers can be created with entirely randomized attributes.</p>
+        <p class="artwork-paragraph"><strong>Interface:</strong> Optimized for seamless interaction across devices, including both desktop and mobile screens.</p>
+        <!-- Spacer large -->
+        <div class="spacer spacer-lg"></div>
         <!-- Image container -->
         <div class="image-stack-container">
           <img src="images/bloom-1.png" alt="Bloom Image 1">
