--- a/projects/forgotten-futures/index.html
+++ b/projects/forgotten-futures/index.html
@@ -155,14 +155,8 @@
   <script src="../../script.js"></script>
   <script src="../../projects/script.js"></script>
   <script>
-    const imgs = [
-      "images/AR-Simulator-1.png",
-      "images/AR-Simulator-2.png",
-      "images/AR-Simulator-3.png",
-      "images/AR-Simulator-4.png",
-      "images/AR-Simulator-5.png",
-      "images/AR-Simulator-6.png"
-    ]; 
+    const imgs = [ "images/AR-Simulator-1.png", "images/AR-Simulator-2.png", "images/AR-Simulator-3.png", "images/AR-Simulator-4.png",
+                   "images/AR-Simulator-5.png", "images/AR-Simulator-6.png" ]; 
     let imgIdx = 0; 
     function showImg(idx) { document.getElementById("galleryImage").src = imgs[idx]; }  
     function prevImg() {
