Update on Bloom

--- a/playground/bloom/index.html
+++ b/playground/bloom/index.html
@@ -160,12 +160,15 @@
         <div class="spacer spacer-lg"></div>
         <!-- Image container -->
         <div class="image-stack-container">
-          <img src="images/bloom-1.png" alt="Bloom Image 1">
+          <img src="images/bloom-2.png" alt="Bloom Image 2">
           <img src="images/bloom-4.png" alt="Bloom Image 4">
           <img src="images/bloom-3.png" alt="Bloom Image 3">
-          <img src="images/bloom-2.png" alt="Bloom Image 2">
-        </div>
+          <img src="images/bloom-5.jpg" alt="Bloom Image 5">
+          <img src="images/bloom-6.jpg" alt="Bloom Image 6">
+          <img src="images/bloom-9.jpg" alt="Bloom Image 9">
+          <img src="images/bloom-7.jpg" alt="Bloom Image 7">
       </div>
+    </div>
     </div>
   </div>
   <!-- Scripts-->
