--- a/about/index.html
+++ b/about/index.html
@@ -83,7 +83,6 @@
     color: #333;
     text-decoration: none;
     transition: color 0.3s;
-    cursor: none;
   }
   @media (max-width: 768px) {
     .about-container {
@@ -202,8 +201,6 @@
 <body>
   <!-- Opening animation -->
   <div class="opening-container"><div class="fade-in"></div></div>
-  <!-- Custom cursor -->
-  <div class="custom-cursor"></div>
   <!-- Header with navigation -->
   <header>
     <a class="cursor-element" href="../index.html"><h1>Ella Tang</h1></a>
@@ -245,7 +242,7 @@
     </div>
   </div>
   <!-- Script -->
-  <script src="../script.js"></script>
+  <script src="../../script.js"></script>
 </body>
 
 <footer class="footer">
