--- a/playground/index.html
+++ b/playground/index.html
@@ -123,8 +123,6 @@
 <body>
   <!-- Opening animation -->
   <div class="opening-container"><div class="fade-in"></div></div>
-  <!-- Custom cursor -->
-  <div class="custom-cursor"></div>
   <!-- Header with navigation -->
   <header>
     <a class="cursor-element" href="../index.html"><h1>Ella Tang</h1></a>
@@ -148,7 +146,7 @@
       <!-- Project items -->
       <div class="column-container cursor-element"></div>
     </section>
-  </div>
+  </div>å
   <!-- Scripts -->
   <script src="../script.js"></script>
   <script src="script.js"></script>
