--- a/playground/bloom/index.html
+++ b/playground/bloom/index.html
@@ -98,8 +98,6 @@
 <body>
   <!-- Opening animation -->
   <div class="opening-container"><div class="fade-in"></div></div>
-  <!-- Custom cursor -->
-  <div class="custom-cursor"></div>
   <!-- Header with navigation -->
   <header>
     <a class="cursor-element" href="../../index.html"><h1>Ella Tang</h1></a>
@@ -167,8 +165,8 @@
           <img src="images/bloom-6.jpg" alt="Bloom Image 6">
           <img src="images/bloom-9.jpg" alt="Bloom Image 9">
           <img src="images/bloom-7.jpg" alt="Bloom Image 7">
+        </div>å
       </div>
-    </div>
     </div>
   </div>
   <!-- Scripts-->
