--- a/studio/inner-beast/index.html
+++ b/studio/inner-beast/index.html
@@ -37,19 +37,21 @@
         <div class="studio-artwork-detail-container">
           <!-- First line with three columns -->
           <div class="first-row">
-            <div class="column project-number"></div>
-            <div class="column project-date"></div>
-            <div class="column project-title"></div>
+            <p class="column project-number"></p>
+            <p class="column project-date"></p>
+            <p class="column project-title"></p>
           </div>
           <!-- Below section with left and right parts -->
           <div class="content-section">
             <!-- Left section with two rows (dimension and material) -->
             <div class="left-section">
-              <div class="row dimension">Dimensions: 24" x 36"</div>
-              <div class="row material project-description"></div>
+              <p class="row dimension">Dimensions: 24" x 36"</p>
+              <p class="row material project-description"></p>
             </div>
             <!-- Right section for project paragraph -->
-            <div class="right-section"><p class="artwork-paragraph"></p></div>
+            <div class="right-section">
+              <p class="artwork-paragraph"></p>
+            </div>
           </div>
         </div>
         <!-- Spacer large -->
