--- a/playground/bloom/index.html
+++ b/playground/bloom/index.html
@@ -76,17 +76,14 @@
         transition: none; /* Remove animations */
         padding: 0.5em 1em;
       }
-
       .button .button-text {
         color: black;
       }
-
       .button:hover {
         background-color: white;
         color: black;
         transform: none; /* Disable hover effect */
       }
-
       .button .fill-container,
       .button .fill-container::after {
         display: none; /* Remove fill animations */
@@ -119,19 +116,21 @@
         <div class="detail-grid-container">
           <!-- First line with three columns -->
           <div class="first-row">
-            <div class="column project-number"></div>
-            <div class="column project-date"></div>
-            <div class="column project-title"></div>
+            <p class="column project-number"></p>
+            <p class="column project-date"></p>
+            <p class="column project-title"></p>
           </div>
           <!-- Below section with left and right parts -->
           <div class="content-section">
             <!-- Left section with two rows (dimension and material) -->
             <div class="left-section">
-              <div class="row dimension">Dimensions: variable</div>
-              <div class="row material project-description"></div>
+              <p class="row dimension">Dimensions: variable</p>
+              <p class="row material project-description"></p>
             </div>
             <!-- Right section for project paragraph -->
-            <div class="right-section"><p class="artwork-paragraph"></p></div>
+            <div class="right-section">
+              <p class="artwork-paragraph"></p>
+            </div>
           </div>
           <!-- Spacer small -->
           <div class="spacer spacer-sm"></div>
