--- a/projects/the-lost-duckling/index.html
+++ b/projects/the-lost-duckling/index.html
@@ -29,7 +29,9 @@
       <!-- Left Section: Artwork Image and Video -->
       <div class="left-content">
         <div class="artwork-image"><img></div>
-        <p class="artwork-paragraph"></p>
+        <div class="sub-heading-content-container">
+          <p class="artwork-paragraph"></p>
+        </div>
         <!-- Spacer large -->
         <div class="spacer spacer-lg"></div>
         <!-- Heading and video -->
