--- a/playground/index.html
+++ b/playground/index.html
@@ -146,7 +146,7 @@
       <!-- Project items -->
       <div class="column-container cursor-element"></div>
     </section>
-  </div>å
+  </div>
   <!-- Scripts -->
   <script src="../script.js"></script>
   <script src="script.js"></script>
