--- a/playground/bloom/index.html
+++ b/playground/bloom/index.html
@@ -164,7 +164,7 @@
           <img src="images/bloom-6.jpg" alt="Bloom Image 6">
           <img src="images/bloom-9.jpg" alt="Bloom Image 9">
           <img src="images/bloom-7.jpg" alt="Bloom Image 7">
-        </div>å
+        </div>
       </div>
     </div>
   </div>
