--- a/about/index.html
+++ b/about/index.html
@@ -140,21 +140,19 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      padding: 1em;
-      max-width: 80%;
-      margin: auto;
+      padding: 0;
+      max-width: 85%;
+      margin: 0 auto;
       gap: 2em;
     }
     .about {
-      text-align: center;
-    }
-    .contact-container {
+      margin-top: 4em;
       text-align: center;
     }
     .profile-photo {
       max-width: 100%;
       height: auto;
-      margin: 0 auto 1.5em auto;
+      margin: 1em auto;
     }
     .about h1 {
       font-size: 1.2em;
@@ -165,6 +163,7 @@
       text-align: justify;
     }
     .contact-container {
+      text-align: center;
       display: flex;
       flex-direction: row;
       justify-content: space-between;
