--- a/projects/wishes-come-true/index.html
+++ b/projects/wishes-come-true/index.html
@@ -6,13 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wishes Come True</title>
   <link rel="stylesheet" href="../../style.css">
+  <style>
+    @media (max-width: 480px) {
+      .artwork-image {
+        margin-top: 3em;
+      }
+      .gallery-container {
+        width: 95%;
+        margin: 0 auto;
+      }
+    }
+  </style>
 </head>
 
 <body>
   <!-- Opening animation -->
   <div class="opening-container"><div class="fade-in"></div></div>
-  <!-- Custom cursor -->
-  <div class="custom-cursor"></div>
   <!-- Header with navigation -->
   <header>
     <a class="cursor-element" href="../../index.html"><h1>Ella Tang</h1></a>
@@ -45,8 +54,8 @@
             <div class="spacer spacer-lg"></div>
             <!-- Vertical image stack -->
             <div class="side-by-side-image-container">
-                <img src="images/wishes-come-true-2.jpg" alt="Wishes Come True Image 2" class="side-by-side-image">
-                <img src="images/wishes-come-true-3.jpg" alt="Wishes Come True Image 3" class="side-by-side-image">
+              <img src="images/wishes-come-true-2.jpg" alt="Wishes Come True Image 2" class="side-by-side-image">
+              <img src="images/wishes-come-true-3.jpg" alt="Wishes Come True Image 3" class="side-by-side-image">
             </div>   
         </div> 
       </div>
