--- a/studio/fluttering/index.html
+++ b/studio/fluttering/index.html
@@ -60,15 +60,9 @@
         <!-- Spacer large -->
         <div class="spacer spacer-lg"></div>
         <!-- Video container-->
-        <div class="sub-heading-content-container">
+        <div style="width: 100%" class="sub-heading-content-container">
           <p class="sub-heading">Documentation</p>
-          <div style="padding-top: 56.25%" class="embedded-video">
-            <iframe 
-              src="https://player.vimeo.com/video/1028061687?loop=1&title=0&byline=0&portrait=0&badge=0&autopause=0" 
-              allow="fullscreen; picture-in-picture" 
-              title="Fluttering"
-            ></iframe>
-          </div>
+          <div style="padding-top: 56.25%" class="embedded-video"><iframe src="https://player.vimeo.com/video/1028061687?loop=1&title=0&byline=0&portrait=0&badge=0&autopause=0" allow="fullscreen; picture-in-picture" title="Fluttering"></iframe></div>
         </div>
       </div>
     </div>
