--- a/projects/the-lost-duckling/index.html
+++ b/projects/the-lost-duckling/index.html
@@ -6,6 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Lost Duckling</title>
   <link rel="stylesheet" href="../../style.css">
+  <style>
+    @media (max-width: 480px) {
+      .artwork-image {
+        margin-top: 3em;
+        width: 95%;
+      }
+    }
+  </style>
 </head>
 
 <body>
@@ -37,15 +45,7 @@
         <!-- Heading and video -->
         <div class="sub-heading-content-container">
           <p class="sub-heading">Full video</p>
-          <div class="embedded-video" style="position: relative; padding-top: 56.25%; height: 0; overflow: hidden;">
-            <iframe 
-              src="https://player.vimeo.com/video/983652434?loop=1&badge=0&autopause=0" 
-              frameborder="0" 
-              allow="fullscreen; picture-in-picture" 
-              title="The Lost Duckling" 
-              style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
-            ></iframe>
-          </div>
+          <div class="embedded-video" style="position: relative; padding-top: 56.25%; height: 0; overflow: hidden;"><iframe src="https://player.vimeo.com/video/983652434?loop=1&badge=0&autopause=0" frameborder="0" allow="fullscreen; picture-in-picture" title="The Lost Duckling" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe></div>
         </div>
         <!-- Spacer large -->
         <div class="spacer spacer-lg"></div>
@@ -54,8 +54,8 @@
           <p class="sub-heading">Duck Bot</p>
           <div class="gallery-container">
             <div class="side-by-side-image-container">
-                <img src="images/duck-front.jpg" alt="Duck Bot Image 1" class="side-by-side-image">
-                <img src="images/duck-side.jpg" alt="Duck Bot Image 2" class="side-by-side-image">
+              <img src="images/duck-front.jpg" alt="Duck Bot Image 1" class="side-by-side-image">
+              <img src="images/duck-side.jpg" alt="Duck Bot Image 2" class="side-by-side-image">
             </div>
             <p class="small-text">A 3D printed duck bot embedded with Arduino module with Bluetooth, controllable through mobile device.</p>
           </div>
