--- a/playground/index.html
+++ b/playground/index.html
@@ -108,10 +108,13 @@
         justify-content: center; 
       }
       .column-item {
-        flex: 0 0 250px;
-        width: 250px; 
-        height: 250px; 
-        border-radius: 10px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 70vw;
+        display: flex;
+        aspect-ratio: 1 / 1;
+        border-radius: 50%;
         margin: 0 auto;
       }
       .column-item::before { background-color: rgba(0, 0, 0, 0.2); }
