--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     <!-- Blob Buttons -->
     <nav>
       <div class="button-container">
-        <a href="studio/index.html" class="blob-btn cursor-element sound-fade-out">
+        <a href="studio/" class="blob-btn cursor-element sound-fade-out">
           Studio
           <span class="blob-btn__inner">
             <span class="blob-btn__blobs">
@@ -239,7 +239,7 @@
             </span>
           </span>
         </a>
-        <a href="projects/index.html" class="blob-btn cursor-element sound-fade-out">
+        <a href="projects/" class="blob-btn cursor-element sound-fade-out">
           Projects
           <span class="blob-btn__inner">
             <span class="blob-btn__blobs">
@@ -250,7 +250,7 @@
             </span>
           </span>
         </a>
-        <a href="playground/index.html" class="blob-btn cursor-element sound-fade-out">
+        <a href="playground/" class="blob-btn cursor-element sound-fade-out">
           Playground
           <span class="blob-btn__inner">
             <span class="blob-btn__blobs">
