--- a/studio/index.html
+++ b/studio/index.html
@@ -17,9 +17,9 @@
     <a class="cursor-element" href="../index.html"><h1>Ella Tang</h1></a>
     <nav class="cursor-element">
       <a href="index.html" class="nav-button active">Studio</a>
-      <a href="../projects/index.html" class="nav-button inactive">Projects</a>
-      <a href="../playground/index.html" class="nav-button inactive">Playground</a>
-      <a href="../about/index.html" class="nav-button inactive">About</a>
+      <a href="../projects/" class="nav-button inactive">Projects</a>
+      <a href="../playground/" class="nav-button inactive">Playground</a>
+      <a href="../about/" class="nav-button inactive">About</a>
     </nav>
   </header>
   <!-- Main content -->
