--- a/playground/index.html
+++ b/playground/index.html
@@ -130,10 +130,10 @@
   <header>
     <a class="cursor-element" href="../index.html"><h1>Ella Tang</h1></a>
     <nav class="cursor-element">
-      <a href="../studio/index.html" class="nav-button inactive">Studio</a>
-      <a href="../projects/index.html" class="nav-button inactive">Projects</a>
+      <a href="../studio/" class="nav-button inactive">Studio</a>
+      <a href="../projects/" class="nav-button inactive">Projects</a>
       <a href="index.html" class="nav-button active">Playground</a>
-      <a href="../about/index.html" class="nav-button inactive">About</a>
+      <a href="../about/" class="nav-button inactive">About</a>
     </nav>
   </header>
   <!-- Main content -->
