--- a/about/index.html
+++ b/about/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About</title>
   <link rel="stylesheet" href="../style.css">
+  <link rel="icon" type="image/png" href="/favicon.png">
   <style>
   /* Main content container */
   .about-container {
@@ -202,12 +203,12 @@
   <div class="opening-container"><div class="fade-in"></div></div>
   <!-- Header with navigation -->
   <header>
-    <a class="cursor-element" href="../index.html"><h1>Ella Tang</h1></a>
+    <a class="cursor-element" href="../"><h1>Ella Tang</h1></a>
       <nav>
-        <a href="../studio/index.html" class="nav-button inactive cursor-element">Studio</a>
-        <a href="../projects/index.html" class="nav-button inactive cursor-element">Projects</a>
-        <a href="../playground/index.html" class="nav-button inactive cursor-element">Playground</a>
-        <a href="../about/index.html" class="nav-button active cursor-element">About</a>
+        <a href="../studio/" class="nav-button inactive cursor-element">Studio</a>
+        <a href="../projects/" class="nav-button inactive cursor-element">Projects</a>
+        <a href="../playground/" class="nav-button inactive cursor-element">Playground</a>
+        <a href="../about/" class="nav-button active cursor-element">About</a>
       </nav>
   </header>
   <!-- Main content -->
