--- a/projects/wishes-come-true/index.html
+++ b/projects/wishes-come-true/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wishes Come True</title>
   <link rel="stylesheet" href="../../style.css">
+  <link rel="icon" type="image/png" href="/favicon.png">
   <style>
     @media (max-width: 480px) {
       .artwork-image {
@@ -24,12 +25,12 @@
   <div class="opening-container"><div class="fade-in"></div></div>
   <!-- Header with navigation -->
   <header>
-    <a class="cursor-element" href="../../index.html"><h1>Ella Tang</h1></a>
+    <a class="cursor-element" href="../../"><h1>Ella Tang</h1></a>
     <nav class="cursor-element">
-        <a href="../../studio/index.html" class="nav-button inactive">Studio</a>
-        <a href="../../projects/index.html" class="nav-button active">Projects</a>
-        <a href="../../playground/index.html" class="nav-button inactive">Playground</a>
-        <a href="../../about/index.html" class="nav-button inactive">About</a>
+      <a href="../../studio/" class="nav-button inactive">Studio</a>
+      <a href="../../projects/" class="nav-button active">Projects</a>
+      <a href="../../playground/" class="nav-button inactive">Playground</a>
+      <a href="../../about/" class="nav-button inactive">About</a>
     </nav>
   </header>
   <!-- Main container -->
