--- a/studio/inner-beast/index.html
+++ b/studio/inner-beast/index.html
@@ -7,34 +7,33 @@
   <title>Inner Beast</title>
   <link rel="stylesheet" href="../../studio/style.css">
   <link rel="stylesheet" href="../../style.css">
+  <link rel="icon" type="image/png" href="/favicon.png">
 </head>
 
 <body>
   <!-- Opening animation -->
   <div class="opening-container"><div class="fade-in"></div></div>
-  <!-- Custom cursor -->
-  <div class="custom-cursor"></div>
   <!-- Header with navigation -->
   <header>
-    <a class="cursor-element" href="../../index.html"><h1>Ella Tang</h1></a>
+    <a class="cursor-element" href="../../"><h1>Ella Tang</h1></a>
     <nav class="cursor-element">
-      <a href="../../studio/index.html" class="nav-button active">Studio</a>
-      <a href="../../projects/index.html" class="nav-button inactive">Projects</a>
-      <a href="../../playground/index.html" class="nav-button inactive">Playground</a>
-      <a href="../../about/index.html" class="nav-button inactive">About</a>
+      <a href="../../studio/" class="nav-button active">Studio</a>
+      <a href="../../projects/" class="nav-button inactive">Projects</a>
+      <a href="../../playground/" class="nav-button inactive">Playground</a>
+      <a href="../../about/" class="nav-button inactive">About</a>
     </nav>
   </header>
   <!-- Main container -->
   <div class="main-container fade-in">
     <!-- Artwork detail container -->
-    <div class="detail-grid-container">  
+    <div class="artwork-detail-container">  
       <div class="gallery-container">
         <!-- Artwork feature image -->
         <div class="artwork-image project-image"><img id="featureImage"></div>
         <!-- Spacer large -->
         <div class="spacer spacer-lg"></div>
         <!-- Details -->
-        <div class="studio-artwork-detail-container">
+        <div class="detail-grid-container">
           <!-- First line with three columns -->
           <div class="first-row">
             <p class="column project-number"></p>
