--- a/studio/two-cities/index.html
+++ b/studio/two-cities/index.html
@@ -7,6 +7,7 @@
   <title>Two Cities</title>
   <link rel="stylesheet" href="../../studio/style.css">
   <link rel="stylesheet" href="../../style.css">
+  <link rel="icon" type="image/png" href="/favicon.png">
   <style>
     .gallery {
       display: flex;
@@ -60,19 +61,15 @@
 <body>
   <!-- Opening animation -->
   <div class="opening-container"><div class="fade-in"></div></div>
-  <!-- Custom cursor -->
-  <div class="custom-cursor"></div>
-  <!-- Header with navigation -->
   <header>
-    <a class="cursor-element" href="../../index.html"><h1>Ella Tang</h1></a>
+    <a class="cursor-element" href="../../"><h1>Ella Tang</h1></a>
     <nav class="cursor-element">
-      <a href="../../studio/index.html" class="nav-button active">Studio</a>
-      <a href="../../projects/index.html" class="nav-button inactive">Projects</a>
-      <a href="../../playground/index.html" class="nav-button inactive">Playground</a>
-      <a href="../../about/index.html" class="nav-button inactive">About</a>
+      <a href="../../studio/" class="nav-button active">Studio</a>
+      <a href="../../projects/" class="nav-button inactive">Projects</a>
+      <a href="../../playground/" class="nav-button inactive">Playground</a>
+      <a href="../../about/" class="nav-button inactive">About</a>
     </nav>
   </header>
-
   <!-- Main container -->
   <div class="main-container fade-in">
     <!-- Artwork detail container -->
