--- a/playground/cappriccio/index.html
+++ b/playground/cappriccio/index.html
@@ -7,21 +7,20 @@
   <title>Cappriccio</title>
   <link rel="stylesheet" href="../../studio/style.css">
   <link rel="stylesheet" href="../../style.css">
+  <link rel="icon" type="image/png" href="/favicon.png">
 </head>
 
 <body>
   <!-- Opening animation -->
   <div class="opening-container"><div class="fade-in"></div></div>
-  <!-- Custom cursor -->
-  <div class="custom-cursor"></div>
   <!-- Header with navigation -->
   <header>
-    <a class="cursor-element" href="../../index.html"><h1>Ella Tang</h1></a>
+    <a class="cursor-element" href="../../"><h1>Ella Tang</h1></a>
     <nav class="cursor-element">
-      <a href="../../studio/index.html" class="nav-button inactive">Studio</a>
-      <a href="../../projects/index.html" class="nav-button inactive">Projects</a>
-      <a href="../../playground/index.html" class="nav-button active">Playground</a>
-      <a href="../../about/index.html" class="nav-button inactive">About</a>
+      <a href="../../studio/" class="nav-button inactive">Studio</a>
+      <a href="../../projects/" class="nav-button inactive">Projects</a>
+      <a href="../../playground/" class="nav-button active">Playground</a>
+      <a href="../../about/" class="nav-button inactive">About</a>
     </nav>
   </header>
   <!-- Main container -->
