--- a/studio/fluttering/index.html
+++ b/studio/fluttering/index.html
@@ -7,6 +7,7 @@
   <title>Fluttering</title>
   <link rel="stylesheet" href="../../studio/style.css">
   <link rel="stylesheet" href="../../style.css">
+  <link rel="icon" type="image/png" href="/favicon.png">
 </head>
 
 <body>
@@ -14,12 +15,12 @@
   <div class="opening-container"><div class="fade-in"></div></div>
   <!-- Header with navigation -->
   <header>
-    <a class="cursor-element" href="../../index.html"><h1>Ella Tang</h1></a>
+    <a class="cursor-element" href="../../"><h1>Ella Tang</h1></a>
     <nav class="cursor-element">
-      <a href="../../studio/index.html" class="nav-button active">Studio</a>
-      <a href="../../projects/index.html" class="nav-button inactive">Projects</a>
-      <a href="../../playground/index.html" class="nav-button inactive">Playground</a>
-      <a href="../../about/index.html" class="nav-button inactive">About</a>
+      <a href="../../studio/" class="nav-button active">Studio</a>
+      <a href="../../projects/" class="nav-button inactive">Projects</a>
+      <a href="../../playground/" class="nav-button inactive">Playground</a>
+      <a href="../../about/" class="nav-button inactive">About</a>
     </nav>
   </header>
   <!-- Main container -->
