--- a/about/index.html
+++ b/about/index.html
@@ -85,6 +85,22 @@
     text-decoration: none;
     transition: color 0.3s;
   }
+  .timeline p {
+    text-align: left;
+    font-size: 1em;
+    font-weight: 300;
+    line-height: 1.6;
+    max-width: 600px;
+    margin-top: 1em;
+  }
+  .timeline strong {
+    text-align: left;
+    font-size: 1em;
+    font-weight: 300;
+    line-height: 1.6;
+    max-width: 600px;
+    margin-top: 1em;
+  }
   @media (max-width: 768px) {
     .about-container {
       flex-direction: column;
@@ -254,6 +270,35 @@
           <p class="cursor-element"><a href="https://github.com/Ella-Tang" target="_blank">GitHub</a></p>
         </div>
       </section> -->
+      <section>
+        <div class="timeline">
+          <p><strong>2025</strong> – Wrapping up at NYU Tisch. 9 years in the U.S, 1 year in Florida, 8 years in New York. California next?</p>
+          <p><strong>2024</strong> – Coded... a lot. But started looking in a new direction.</p>
+          <p><strong>2023</strong> – Yep, still coding and figuring out.</p>
+          <p><strong>2022</strong> – Glass, neon, and my first lines of code. Kinda wild.</p>
+          <p><strong>2021</strong> – Got at NYU. Made stuff. Studio was a vibe.</p>
+          <p><strong>2020</strong> – Painted everyday. And what a weird year with the Pandemic.</p>
+          <p><strong>2019</strong> – Picked up a brush and kinda never stopped.</p>
+          <p><strong>2018</strong> – Things were hard, but art came back.</p>
+          <p><strong>2017</strong> – Moved to NY for high school. Unexpected, but glad it happened.</p>
+          <p><strong>2016</strong> – Left Shanghai. Started school in Florida. Big change, new chapter.</p>
+          <p><strong>2015</strong> – Studied English hard to prep for the U.S And, bye piano.</p>
+          <p><strong>2014</strong> – Lots of studying. Less drawings and piano...</p>
+          <p><strong>2013</strong> – Started middle school at Yan’an. Was good.</p>
+          <p><strong>2012</strong> – The “end of the world” didn’t happen. That was nice.</p>
+          <p><strong>2011</strong> – Studied. Drew things. Played piano. Repeat.</p>
+          <p><strong>2010</strong> – Studied. Drew things. Played piano. Repeat.</p>
+          <p><strong>2009</strong> – Studied. Drew things. Played piano. Repeat.</p>
+          <p><strong>2008</strong> – Started elementary school in Changning. Little me, big backpack.</p>
+          <p><strong>2007</strong> – Don’t remember much. But the photos say I was happy.</p>
+          <p><strong>2006</strong> – Don’t remember much. But the photos say I was happy.</p>
+          <p><strong>2005</strong> – Don’t remember much. But the photos say I was happy.</p>
+          <p><strong>2004</strong> – Don’t remember much. But the photos say I was happy.</p>
+          <p><strong>2003</strong> – Don’t remember much. But the photos say I was happy.</p>
+          <p><strong>2002</strong> – Don’t remember much. But the photos say I was happy.</p>
+          <p><strong>2001</strong> – Born in Shanghai. Thanks mom and dad ❤️</p>
+        </div>
+      </section>
     </div>
   </div>
   <!-- Script -->
