--- a/about/index.html
+++ b/about/index.html
@@ -281,7 +281,7 @@
           <p><strong>2019</strong> – Picked up a brush and kinda never stopped.</p>
           <p><strong>2018</strong> – Things were hard, but art came back.</p>
           <p><strong>2017</strong> – Moved to NY for high school. Unexpected, but glad it happened.</p>
-          <p><strong>2016</strong> – Left Shanghai. Started school in Florida. Big change, new chapter.</p>
+          <p><strong>2016</strong> – Left Shanghai. Started school in Florida. New chapter.</p>
           <p><strong>2015</strong> – Studied English hard to prep for the U.S And, bye piano.</p>
           <p><strong>2014</strong> – Lots of studying. Less drawings and piano...</p>
           <p><strong>2013</strong> – Started middle school at Yan’an. Was good.</p>
@@ -289,7 +289,7 @@
           <p><strong>2011</strong> – Studied. Drew things. Played piano. Repeat.</p>
           <p><strong>2010</strong> – Studied. Drew things. Played piano. Repeat.</p>
           <p><strong>2009</strong> – Studied. Drew things. Played piano. Repeat.</p>
-          <p><strong>2008</strong> – Started elementary school in Changning. Little me, big backpack.</p>
+          <p><strong>2008</strong> – Started elementary school. Little me, big backpack.</p>
           <p><strong>2007</strong> – Don’t remember much. But the photos say I was happy.</p>
           <p><strong>2006</strong> – Don’t remember much. But the photos say I was happy.</p>
           <p><strong>2005</strong> – Don’t remember much. But the photos say I was happy.</p>
