--- a/about/index.html
+++ b/about/index.html
@@ -253,8 +253,8 @@
           updateDateTime();
           setInterval(updateDateTime, 1000);
         </script>
-        <p>If you're curious about who I am and what I do... I'm Ella Tang. Just a human figuring things out with colors, pixels, and a bit of chaos.</p>
-        <p>Espresso first, glass later, art all the time. Wanna grab a drink or talk about art? Reach me at: tangjiayun45@gmail.com</p>
+        <p>If you're curious about who I am and what I do... I'm Ella Tang. Just a human figuring things out with pigments, pixels, and a bit of chaos.</p>
+        <p>Coffee first, alcohol later, art anytime. Wanna grab a drink and talk about art? Reach me at: tangjiayun45@gmail.com</p>
       </section>
       <!-- Contact section -->
       <!-- <section class="contact-container"> -->
@@ -274,8 +274,8 @@
           <p><strong>2025</strong> – Wrapping up at NYU Tisch. 9 years in the U.S, 1 year in Florida, 8 years in New York. California next?</p>
           <p><strong>2024</strong> – Coded... a lot. But started looking in a new direction.</p>
           <p><strong>2023</strong> – Yep, still coding and figuring out.</p>
-          <p><strong>2022</strong> – Glass, neon, and my first lines of code. Kinda wild.</p>
-          <p><strong>2021</strong> – Got at NYU. Made stuff. Studio was a vibe.</p>
+          <p><strong>2022</strong> – Glass, neon. Kinda wild.</p>
+          <p><strong>2021</strong> – Got at NYU. Made stuff. Studio was a vibe. And first lines of code.</p>
           <p><strong>2020</strong> – Painted everyday. And what a weird year with the Pandemic.</p>
           <p><strong>2019</strong> – Picked up a brush and kinda never stopped.</p>
           <p><strong>2018</strong> – Things were hard, but art came back.</p>
